--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
 
     <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/images.css" rel="stylesheet" type="text/css">
     
     <meta property="og:title" content="Re:Trip">
     <meta property="og:description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
@@ -15,7 +16,14 @@
 
   <body>
     <h1>Re:Trip</h1>
-    <div id="haiku-container"></div>
+    <!-- <div id="image-container">
+      <button class="arrow prev" aria-label="Previous"><</button>
+      <div id="image-wrapper">
+        <div></div>
+      <button class="arrow next" aria-label="Previous">></button>
+    </div> -->
+    <div id="images"></div>
+
 
     <script src="/js/app.js"></script>
   </body>
