入力画像を表示・リセットでトップへ戻る

--- a/public/results/index.html
+++ b/public/results/index.html
@@ -17,6 +17,7 @@
   <body>
     <h1>Re:Trip</h1>
     <div id="images"></div>
+    <button id="del_button">リセット</button>
 
     <script src="/js/images.js"></script>
   </body>
