--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
 
     <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/top.css" rel="stylesheet" type="text/css">
     
     <meta property="og:title" content="Re:Trip">
     <meta property="og:description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
@@ -14,14 +15,20 @@
   </head>
 
   <body>
-    <h1>Re:Trip</h1>
-    <form id="upload-form">
-        <h2>写真のアップロード</h2>
-        <input type="file" id="photo-files" name="photos" accept="image/*" multiple required>
-        <button type="submit">アップロードして処理を開始</button>
-    </form>
+    <img src="images/ReTrip.png" alt="Re:Trip" class="title">
+    <p class="catch-copy">That Trip, Once More.</p>
+    <div class="back-wrapper">
+      <form id="upload-form">
+          <h2>写真のアップロード</h2>
+          <input type="file" id="photo-files" name="photos" accept="image/*" multiple required style="display: none;">
+          <button id="file-select" type="button">画像を選択</button>
+          <p class="file-status-text">選択されていません</p>
+          <button type="submit" >アップロードして処理を開始</button>
+      </form>
 
-    <div id="status-message"></div>
+      <p id="status-message"></p>
+    </div>
+
 
     <script src="/js/upload.js"></script>
   </body>
