軽微な修正（results画面のタイトルを画像化、css変数の定義など）

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <img src="images/ReTrip.png" alt="Re:Trip" class="title">
+    <img src="/images/ReTrip.png" alt="Re:Trip" class="title">
     <p class="catch-copy">That Trip, Once More.</p>
     <div class="back-wrapper">
       <form id="upload-form">
