--- a/public/results/index.html
+++ b/public/results/index.html
@@ -15,9 +15,10 @@
   </head>
 
   <body>
-    <h1>Re:Trip</h1>
+    <img src="/images/ReTrip.png" alt="Re:Trip" class="title">
     <div id="images"></div>
-    <button id="del_button">リセット</button>
+    <div id=""></div>
+    <button id="del-button">リセット</button>
 
     <script src="/js/images.js"></script>
   </body>
