--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       <form id="upload-form">
           <h2>写真のアップロード</h2>
           <input type="file" id="photo-files" name="photos" accept="image/*" multiple required style="display: none;">
-          <button id="file-select" type="button">画像を選択</button>
+          <button id="file-select" type="button">写真を選択</button>
           <p class="file-status-text">選択されていません</p>
-          <button type="submit" >アップロードして処理を開始</button>
+          <button type="submit" id="submit-button">選択した写真をアップロード</button>
       </form>
 
       <p id="status-message"></p>
