--- a/public/results/index.html
+++ b/public/results/index.html
@@ -17,7 +17,7 @@
   <body>
     <img src="/images/ReTrip.png" alt="Re:Trip" class="title">
     <div id="images"></div>
-    <div id=""></div>
+    <div id="map"></div>
     <button id="del-button">リセット</button>
 
     <script src="/js/images.js"></script>
