マップ埋め込みの枠だけ作成

--- a/public/results/index.html
+++ b/public/results/index.html
@@ -21,5 +21,6 @@
     <button id="del-button">リセット</button>
 
     <script src="/js/images.js"></script>
+    <script src="/js/map.js"></script>
   </body>
 </html>
