cssファイル名変更・map.css追加

--- a/public/results/index.html
+++ b/public/results/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
 
-    <link href="/css/main.css" rel="stylesheet" type="text/css">
+    <link href="/css/common.css" rel="stylesheet" type="text/css">
     <link href="/css/images.css" rel="stylesheet" type="text/css">
+    <link href="/css/map.css" rel="stylesheet" type="text/css">
     
     <meta property="og:title" content="Re:Trip">
     <meta property="og:description" content="あの旅行を、もう一度。Re:Tripは大切な旅行の思い出を振り返るサービスです。あなたも旅路をたどってあのときの気持ちを思い出しませんか？">
