--- a/public/results/index.html
+++ b/public/results/index.html
@@ -17,8 +17,11 @@
 
   <body>
     <img src="/images/ReTrip.png" alt="Re:Trip" class="title">
-    <div id="images"></div>
-    <div id="map"></div>
+    <div id="images" class="visible"></div>
+    <div id="map">
+      <div id="map-container"></div>
+    </div>
+    <button id="toggle-button">旅行経路を表示</button>
     <button id="del-button">リセット</button>
 
     <script src="/js/images.js"></script>
