ぐるぐる設定！

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,14 @@
       </form>
 
       <p id="status-message"></p>
+
+      <!-- ▼▼▼ 追加：iPhone風のローディングスピナー ▼▼▼ -->
+      <div id="loading-spinner" class="ios-spinner hidden">
+        <div></div><div></div><div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div><div></div><div></div>
+      </div>
+      <!-- ▲▲▲ 追加ここまで ▲▲▲ -->
+       
     </div>
 
 
